[package]
name = "bits"
version = "0.15.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = {version = "1.15.1", features = ["serde"]}
num = "0.4"
serde = {version = "1.0.228", features = ["derive"]}